backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: backend:1
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: backend-persistent-storage
              mountPath: /storage
          resources:
            limits:
              cpu: 1000m # 최대 1core
            requests:
              cpu: 500m # 최소 0.5core 가능해야 함
      volumes:
        - name: backend-persistent-storage
          persistentVolumeClaim:
            claimName: backend-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  annotations:
    # MetalLB에서 ip를 공유하도록 함
    metallb.universe.tf/allow-shared-ip: "key-to-share-1.2.3.4"
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 3000
