server-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-server
spec:
  type: LoadBalancer
  selector:
    app: node-server
  ports:
    - port: 3000
      targetPort: 3000
