server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-server
spec:
  type: NodePort
  selector:
    app: node-server
  ports:
    - port: 4000
      targetPort: 3000
      nodePort: 30000
